--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "npm-global-test-sass-loader",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "1.1.1",
   "keywords": [],
-  "author": "",
+  "author": "RichieChoo",
   "license": "ISC",
   "dependencies": {
     "sass-loader": "^13.3.2"
